--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 base="light"
-primaryColor="#509859"
-secondaryBackgroundColor="#c9eab8"
+primaryColor="#d81159"
+secondaryBackgroundColor="#ffbc42"
 textColor="#000000"
